# frame-server

./: .gitignore  Dockerfile  Procfile  README.md  heroku.yml  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
account/: apps.py  managers.py  models.py  serializers.py  urls.py  utils.py
account/migrations/: 0001_initial.py
banner/: admin.py  models.py
banner/migrations/: 0001_initial.py
core/: models.py
core/utils/: datetime.py  typing.py
frame/: settings.py  urls.py
frame/settings/: __init__.py  authentication.py  secrets.py
frame/settings/modes/: devel.py  local.py
