[tool.poetry]
name = "frame-server"
version = "0.1.0"
description = "Frame web server"
authors = ["Subin Kim <sudosubin@gmail.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
djangorestframework = "^3.11.0"
djangorestframework-jwt = "^1.11.0"
Pillow = "^7.2.0"
django-storages = "^1.9.1"
google-cloud-storage = "^1.29.0"
django-rest-auth = "^0.9.5"
django-allauth = "^0.42.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"
whitenoise = "^5.1.0"
typeguard = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-django = "^1.1.1"
bpython = "^0.19"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.2.0"
flake8-mypy = "^17.8.0"
